--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     border: 2px solid blue;
 }
 
-.btn {
+.btn-custom {
     background-color: green;
     padding: 10px;
     color: white;
@@ -43,4 +43,41 @@
     background-color: red;
     position: sticky;
     top: 0px;
+}
+
+.card-custom{
+    position: relative;
+    left: 30px;
+}
+
+.box32{
+    width: 300px;
+    height: 300px;
+    background-color: blueviolet;
+    position: absolute;
+    top: 1px;
+    z-index: -1;
+}
+
+.main{
+    display: flex;
+    flex-direction: column;
+}
+
+.box43{
+    width: 300px;
+    height: 300px;
+    background-color: cornflowerblue;
+}
+
+@media screen and (min-width:425px){
+    .box43{
+        width: 150px;
+        height: 150px;
+        background-color: darkgoldenrod;
+    }
+
+    .my-para{
+        font-size: 20px;
+    }
 }
